on game structure

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -834,6 +834,17 @@ The initial use of a working structural template was an intuitive response based
 
 The following section explores designs decisions relevant to the evolution of this starting template by drawing on HCI theory and in particular the concept of affordances (with a mediated action perspective) understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927]. It also describes the alignment of these decisions with the UMC framework.
 
+**A note on structural design patterns**
+
+A web code project using the chosen game framework
+phaser consists of several interlinked files of Javascript, HTML and CSS and image files. Creating the project from first principles is relatively complex both semantically and practically. In the domain of web technology, starter templates consist of pre-built collections of HTML, JavaScript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023].
+
+Phaser starting templates available from the website share this pattern of files. The main javascript file containing game code is called game js with the game code. Many code tutorials follow the same structure of suggested functions preload, create and update.
+
+Resource - https://developer.mozilla.org/en-US/docs/Games/Tutorials/2D_breakout_game_Phaser/Initialize_the_framework
+
+The template in this case followed the following structure: a beginning section out side of a function declaring variables; a preload function which loads assets into the game ;a create function which sets up the initial game; an update function which listens to and responds to user input.
+
 
 <!-- The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop.  -->
 
@@ -876,10 +887,12 @@ A later discussion section in this chapter illustrates a more complex interactio
 #### Variable editing for player movement
 
 
-To help guide the experimentation of users, I identified changes to the code that were easily recognisable game experience features and where small changes could provoke a high impact on the game experiences. To illustrate this, participants first interacted with the game in an obviously broken state.
-
+While access to HTML and CSS files of the base project was available in the left menu as show in  by default participants would see only the JavaScript file names game.js.
 
 ![](./Pictures/simple_game_template_3a.png){width=95%}
+4.x glitch coding environment with code structure of left menu, a central code window with code, comments and game preview on the right.
+
+To help guide the experimentation of users, I identified changes to the code that were easily recognisable game experience features and where small changes could provoke a high impact on the game experiences. To illustrate this, participants first interacted with the game in an obviously broken state.
 
 The player's maximum jump trajectory was not sufficient to progress via a jump to the first platform. This state invited participants to make changes to fix it. This foundation aligns with concept of half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them [@kynigos_children_2018].
 
@@ -901,7 +914,16 @@ game layout of the platforms - hazards and food to collect. -->
 
 #### Level design and prototyping
 
-The starting game template included a minimal amount of platforms, hazards to avoid and golden blocks to collect. Many participants spent significant time and effort on level design both in initial stage and in subsequent sessions, undertaking many iterations of changes to the level design. As explored in the vignette in the previous chapter, Toby and several others designed to make the game challenging but still technically possible. In contrast, two participants played with the convention of the game by removing all hazards and filling the screen with rewards/coins.
+Platform games often conform to certain patterns in terms of the elements involved in a level, namely the player, platforms, enemy and rewards.  A key area of evolution from P1 to P2 was the way in which partcipants added these main features of level design.
+
+
+The process of adding game elements was  involved relatively complex process which involved changing parameters of functions to alter to adjust their location.
+
+Based on a different tutorial, I revised the starting template to created game elements was based on a visual design in a grid format. See Illustration 4.x below.
+
+IS THIS DETAILED ABOVE?
+
+Many participants spent significant time and effort on level design both in initial stage and in subsequent sessions, undertaking many iterations of changes to the level design. As explored in the vignette in the previous chapter, Toby and several others designed to make the game challenging but still technically possible. In contrast, two participants played with the convention of the game by removing all hazards and filling the screen with rewards/coins.
 
 <!-- The vignette in the last chapter saw Toby's adding new levels to his game and undertaking many iterations of changes to the level design.  -->
 
@@ -921,21 +943,7 @@ As they had been guided to make a game on a broadly environmental theme. Partici
 <!-- MOVE?
 The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using code syntax. -->
 
-#### Creating a simplified and clear project structure
-
-A web code project using the chosen game framework phaser consists of several interlinked files of Javascript, HTML and CSS and image files. Creating the project from first principles is relatively complex both semantically and practically. In the domain of web technology, starter templates consist of pre-built collections of HTML, JavaScript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023].
-
-
-The HTML and CSS of the base project was kept to a minimum and by default participants would see only the JavaScript file names game.js.
-
-
-4.x - Code environment for starting template for for P2 and P3
-
-The template in this case followed the following structure:
-- a beginning section out side of a function declaring variables
-- a preload function which loads assets into the game
-- a create function which sets up the initial game
-- an update function which listens to and responds to user input, e.g. moving a player on the screen
+<!-- #### Creating a simplified and clear project structure
 
 The following illustration from the step-based instructions illustrates the structure for participants.
 
@@ -949,7 +957,7 @@ At one stage I did a test of that process by printing out different elements of 
 INSERT QUOTE FROM SU AND TOBY
 
 Despite building familiarity with code, at this stage event simple game changes or adding new elements still required significant support.
-
+ -->
 
 
 #### Observations on design behaviours encouraged through use of game template
