--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -960,31 +960,32 @@ Despite building familiarity with code, at this stage event simple game changes 
  -->
 
 
-#### Observations on design behaviours encouraged through use of game template
+### Observations on the initial use of game template and core tool use
 
-INCLUDE THE AT LANGUAGE
+INCLUDE THE AT LANGUAGE - and relate back to the
 
-The rationale aligns with the core motivations of UMC technique, to build familiarity with the code structure, and confidence in use of tools in an accelerated way. Also the larger change in the game play experience are motivating [find source], a concept that aligns with the concept of good feedback in HCI literature [find source].  
+<!-- The templated game was structured to allow changes in code which were relatively easy to perform but which resulted in potentially large changes in game behaviour, appearance and difficulty. This created a large diversity in the games created and in the making activities of participants at this stage despite the small scale of the code changes involved.   -->
+<!-- Thus while I highlighted a limited number key code elements and structures to create affordances to facilitate a quick start, the diversity of experience kept some participants extended periods of time. -->
 
-<!-- While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time. -->
+
+The previous sections have outlined changes to the core tool use including the use of a starter game template which I enacted to address the struggles participants had in becoming accustomed to game making.  Despite the simplicity of the highlighted affordances outlined above, complex and divergent patterns of design behaviour began to emerge. Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with the concept of good feedback in HCI literature [find source] is motivating for system users.
+
+Similarly, the use of revised in starter template in P2 allowed participants to maintained their games in a working and shareable state for most of the time. This compares to periods in P1 where there were extensive periods of time when the game was in a broken state and thus not shareable. My reflections as an facilitator are consistent with research showing the value of ongoing feedback in HCI and more domain specific research on showing the process of sharing creations are motivating thus.
+
+The rationale aligns with the core motivations of UMC technique, to build familiarity with the code structure, and confidence in use of tools in an accelerated way.   At the use and modify stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns most closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].   The shift in design from P1 to P2 involved a much more careful and structured experience for participants in use and modify stages.
 
 
-At the use and modify stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns most closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].  
+Participants needed help to access and use the key affordances in code described above. In early trials with a limited number of families, I would point out the relevant part of the code and ask open questions like, _I wonder what would happen if you changed that gravity variable?_ I was concerned that for larger groups this was not optimal, risking leaving some unsupported. My response was to turn to supporting documentation. While this section has described my design response to tensions stemming from code and asset authoring tools and the resultant use of starting game code template, the next section explores similar tensions related to the role of supporting resources. Also, while the simple changes to the game dynamics and patterns embedded in the starting template helped motivation and engagement, some participants soon began to ask how to make additions to the game which needed new code structures to be added to the framework of the template. This point marks the pivot to the _create_ phase on the UMC model. At this stage greater support was needed as explored in the next section.
 
-The templated game was structured to allow changes in code which were relatively easy to perform but which resulted in potentially large changes in game behaviour, appearance and difficulty. This created a large diversity in the games created and in the making activities of participants at this stage despite the small scale of the code changes involved.  Thus while I highlighted a limited number key code elements and structures to create affordances to facilitate a quick start, the diversity of experience kept some participants extended periods of time.
 
-While the simple changes to the game dynamics and patterns embedded in the starting template helped motivation and engagement, some participants soon began to ask how to make additions to the game which needed new code structures to be added to the framework of the template. At this stage greater support was needed as explored in the next section. This point marks the pivot to the _create_ phase on the UMC model. The shift in design from P1 to P2 involved a much more careful and structured experience for participants in use and modify stages. While I do not have comparative video and interview evidence between P1 and P2,  alignment with existing research to my journal notes of observations of engagement are useful here to build a picture of the experience.
 
-New participants in P2 all maintained a working game thus able to share at the end of each session. This compares to periods in P1 where there were extensive periods of time when the game was in a broken state and thus not shareable. My reflections as an facilitator align with research that consistent feedback and the process of sharing creations are motivating thus, keeping games in a working / shareable state is optimal for participant engagement.
 
 
 <!-- The partially working environment and immediate feedback this allowed also gave rapid access access to varied forms of face to face community activity including varied forms of playtesting and social interaction and ways to access help from peers and facilitators.
-
 While Scratch has an extensive online community allowing for remixing and showcasing of games,  the community element of the design are not is explored in this section. See instead chapter six. -->
+<!-- While, initially conceived as a starting activity, many learners stuck with those possibilities for a long period of time. -->
 
-Participants needed help to access and use the key affordances in code described above. In early trials with a limited number of families, I would point out the relevant part of the code and ask open questions like, _I wonder what would happen if you changed that gravity variable?_
 
-I was concerned that for larger groups this was not optimal, risking leaving some unsupported. My response was to turn to supporting documentation. While this section has described my design response to tensions stemming from code and asset authoring tools and the resultant use of starting game code template, the next section explores similar tensions related to the role of supporting resources.
 
 <!-- although help was available via in-line text code comments, I noted that to notice and read these comments required a degree of proficiency or code familiarity that not all participants had.
  -->
