--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -1027,11 +1027,13 @@ DEVELOP THIS SECTION -->
 
 **Nature of conflict and how different from previous one**
 
-While the previous section outlined responses to a conflict experienced by partcipants in address a challenge to getting started... this section details a conflict which took place when game making was underway. At times participant knew what new features or changes the wanted to add to the game but were not clear on what computer code was needed to implement it. This cause delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair.  The inability for participants progress due to lack of game and coding practices was compounded in early stages by little or no supporting documentation or supporting resources. Analysis of video data showed that adult participants were aware of the limited time that I could give each group and that this resulted in them restricting how often they or their kids asked for direct help. This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict.
+While the previous section outlined responses to a conflict experienced by partcipants in address a challenge to getting started, this section details a conflict which took place when game making was underway. Participants, frequently knew what new features or changes the wanted to add to the game but were not clear on what computer code was needed to implement it. This cause delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair.  
 
-Within AT termniology, these supporting documentation can be seen as a form of secondary stimulation. Double stimulation can be summarised as input
-The work of Sannino, explored this outside of a lab setting in education in a relatively informal setting.
-EXPAND THIS.
+Some interpretations of double stimulation see the problem task as the first stimulus, and means based tools as a second stimuli.
+Lund [-@lund_right_2008-1] stresses the importance of multiple stimuli in the process open to learners outside of lab settings.  Similarly, Sannino highlights the volitional aspect of the process of double stimulation in authentic settings to thus shed light on participants expression of agency. While the affordances built into the code playground are valid secondary stimuli in initial in helping to seed initial activity, supporting documentation can be seen as a form of secondary stimulation more aligned to the process of building agency. 
+
+The inability for participants progress due to lack of game and coding practices was compounded in early stages by little or no supporting documentation or supporting resources. Analysis of video data showed that adult participants were aware of the limited time that I could give each group and that this resulted in them restricting how often they or their kids asked for direct help. This section outlines the evolutions and design choices informing the different forms of supporting documentation used to address this conflict.
+
 
 To support the use of the staring processes outlined above, at the end of P1 I asked trainee computing teachers in my faculty to create printable resources that highlighted the key lines of code in an way that linked to game behaviour. I called these quick start cards (see figure 4.x below).
 
