on art, and level design

--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -832,7 +832,7 @@ This theme of shielding from complexity is contained in all design choices detai
 
 The initial use of a working structural template was an intuitive response based on my own experience of teaching technology. The choice to pre-select a particular genre was initially a pragmatic response to tensions experienced in P1. When offering feedback to address her family's feeling of isolation from the coding process, the parent of the family described in part two of this section had more hands on play and use of the tools of production before being called on to make creative decision, likening this to an arts studio approach. I realised that to allow for this playful experimentation, a purely structural template was insufficient and that a working game template was preferred. To create the template I drew on the structure of three online tutorials to support create a two-dimensional platformer game [^1].
 
-The following section explores designs decisions relevant to the evolution of this starting template by drawing on HCI theory and in particular the concept of affordances (with a mediated action perspective) understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927]. It also describes the alignment of these decisions with the UMC framework.
+The following section explores designs decisions relevant to the evolution of this starting template by drawing on UMC approaches, constructionist design heuristics, and the domain of human-computer interaction (HCI) research. In particular, the concept of affordances understood from a socio-cultural perspective as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927].  
 
 **A note on structural design patterns**
 
@@ -843,7 +843,7 @@ Phaser starting templates available from the website share this pattern of files
 
 Resource - https://developer.mozilla.org/en-US/docs/Games/Tutorials/2D_breakout_game_Phaser/Initialize_the_framework
 
-The template in this case followed the following structure: a beginning section out side of a function declaring variables; a preload function which loads assets into the game ;a create function which sets up the initial game; an update function which listens to and responds to user input.
+The template in this case followed the following structure: a beginning section out side of a function declaring variables; a preload function which loads assets into the game ;a create function which sets up the initial game; an update function which listens to and responds to user input. While access to HTML and CSS files of the base project was available in the left menu as show in  by default participants would see only the JavaScript file names game.js (See Figure 4.x below)
 
 
 <!-- The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop.  -->
@@ -886,27 +886,19 @@ A later discussion section in this chapter illustrates a more complex interactio
 
 #### Variable editing for player movement
 
-
-While access to HTML and CSS files of the base project was available in the left menu as show in  by default participants would see only the JavaScript file names game.js.
+To accelerate and support the experimentation of users, I identified changes to the code that were easily recognisable game experience features and where small changes could provoke a high impact on the game experiences. These include changing gravity, altering the player jump height and walking speed.
 
 ![](./Pictures/simple_game_template_3a.png){width=95%}
 4.x glitch coding environment with code structure of left menu, a central code window with code, comments and game preview on the right.
 
-To help guide the experimentation of users, I identified changes to the code that were easily recognisable game experience features and where small changes could provoke a high impact on the game experiences. To illustrate this, participants first interacted with the game in an obviously broken state.
+The starting template began with the game in a broken state. The player's maximum jump trajectory was not sufficient to progress via a jump to the first platform. This state invited participants to make changes to fix it. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code (see Figure above). In their research Kynigos and colleagues [-@kynigos_children_2018] explore this concept as a half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them.
 
-The player's maximum jump trajectory was not sufficient to progress via a jump to the first platform. This state invited participants to make changes to fix it. This foundation aligns with concept of half-baked games where incompleteness or bugs in behaviour are a provocation to participants to correct or to further modify them [@kynigos_children_2018].
+This process also aligns with the motivations and techniques of the UMC framework explored in the literature review , in particular the guideline to "create choices that show visible and immediate changes" [@lytle_use_2019-1, p. 6]. In this design, the first participant choice and the need to  transition from the _use_ to _modify_ stages is forced at an early stage by the half-baked design. While this design decision compromises the user choice initially, it allows a  carefully scaffolding of early coding experiences and promotes a shared experience for all participants in a way which facilitates and encourages peer learning. After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement. Data explored in the next chapter supports foundational claims of contructionist computing and UMC advocates  that greater user choice over the design process contributes to participant motivational and a feeling ownership of their projects [@lytle_use_2019, @peppler_computer_2009]
 
 
-I brought certain variables that had high impact on the game experiences to the very start of the code and named them carefully to highlight the link with the game players experience. These include changing gravity, altering the player jump height and walking speed.
-
-The starting template began with the game in a broken state. Specifically, the players' avatar could not jump up to the first platform. They were thus stuck. To progress, participants needed to change alter at least one of the key variables were highlighted at the very start of the game code. This part of the process aligns with the use and modify part of the UMC framework. In some ways these two stages are blurred. As the transition from Use to Modify is forced at an early stage by the half-baked design. Thus the use and modify early stages are carefully scaffolded.
-
-After this shared first change, participants next choices varied greatly. While some participants engaged with extensive experimentation to find a player movement feel that seemed just right, others, mostly adults or younger participants, were much less concerned with this aspect of game play, despite sometime frustrating resulting player movement.
 
 <!-- Descriptions of three design techniques to the template to make quick modification of the game easier follow. -->
-
 <!-- I adapted my design with an aim to increase speed and consistency of feedback from learner input, reduce coding syntax knowledge needed to progress, and thus reduce learner anxiety for novices.  -->
-
 <!-- list of changes
 background colour of the game
 game layout of the platforms - hazards and food to collect. -->
@@ -914,16 +906,28 @@ game layout of the platforms - hazards and food to collect. -->
 
 #### Level design and prototyping
 
-Platform games often conform to certain patterns in terms of the elements involved in a level, namely the player, platforms, enemy and rewards.  A key area of evolution from P1 to P2 was the way in which partcipants added these main features of level design.
+The use of a graphical grid structure to edit level design helped balance concerns of accessibility with the use of authentic code language. Platform games often conform to certain patterns in terms of the elements involved in a level and their affordances. Common elements include the player that you control to movement of, platforms to be jumped on, enemies to be avoided and rewards to be collected. In the templated used in P1 the process of adding game elements was  involved relatively complex process which involved changing parameters of functions to alter to adjust their location. An example of the code needed to add two platforms is included one of my tutorial chapters [^7]. In the preload function the following code would be added.
 
+    game.load.image("grass:4x1", "images/grass_4x1.png");
 
-The process of adding game elements was  involved relatively complex process which involved changing parameters of functions to alter to adjust their location.
+Then in the create function the following code would be added.
 
-Based on a different tutorial, I revised the starting template to created game elements was based on a visual design in a grid format. See Illustration 4.x below.
+    var platform1 = platforms.create(150, 220, 'grass:4x1');
+    platform1.body.immovable = true;
 
-IS THIS DETAILED ABOVE?
+    var platform2 = platforms.create(250, 150, 'grass:4x1');
+    platform2.body.immovable = true;
 
-Many participants spent significant time and effort on level design both in initial stage and in subsequent sessions, undertaking many iterations of changes to the level design. As explored in the vignette in the previous chapter, Toby and several others designed to make the game challenging but still technically possible. In contrast, two participants played with the convention of the game by removing all hazards and filling the screen with rewards/coins.
+This approach had several disadvantages including: complexity of adding function parameters for screen coordinates and difficultly of troubleshooting location; the need to add code to various places in the code; each platform needs to be added separately; and the difficultly of creating and swapping out different size graphical files when altering the length of a platform. A similar process was also needed for each reward and hazard. While in early stages I took measures to mitigate some of these complexities, the process remained too complex for the immediacy of game modification that I envisaged as desireable. For the template use in P2, I revised the starting template to created game elements was based on a visual design in a grid format(see figure 4.x below). Changes to the text based grid in the code area on the left would be immediately seen in the right hand project preview area.
+
+<!-- OPTIONAL ADD AND APPENDIX ON LOAD LEVEL? -->
+
+![](./Pictures/grid_editor_1.png){width=95%}
+Figure 4.x - Grid based editing of level design with a simple key for hazards, coins, and platforms.
+
+Technically, this approach involves the construction of a data array for each level of 17 blocks which can be one of the following: x (platform); h (hazard); o (coin); or left blank. The end result is that while participants alter a text-based array, the grid structure has a strong visual correlation with the resulting game layout. This design choice allowed alignment with design principles for tools for novice coders stemming from research highlighting the importance of visual approach to facilitate the programming multi-media projects for novices. [@guzdial_programming_2004; @resnick_scratch:_2009].  
+
+This design had a positive impact on engagement in level design in initial stages with many participants spending significant time and effort undertaking many iterations of changes to the level design. As explored in the vignette above, Toby designed many levels making the game very challenging but still technically possible. Participants varied in their approach to level design, some drew on their experiences to mirrors platform game conventions, while others enjoyed working against these conventions, a theme which is explored in more detail in chapter five.
 
 <!-- The vignette in the last chapter saw Toby's adding new levels to his game and undertaking many iterations of changes to the level design.  -->
 
@@ -931,6 +935,8 @@ Many participants spent significant time and effort on level design both in init
 
 
 #### Background colour and a pixel art
+
+A pixel art approach to graphics allowed a balance between the potential for positive engagement with game making and the potential drain of time to this one activity. 
 
 One activity that all participants spent some time on was to replace the coloured block of the starting template with pixel art sprites created using the Piskel tool. Participant spent a widely different length of time creating these graphics. Some took a long time to master the process of using the editing tool. Some others struggled with the process of exporting the images to the code editor. Others were relatively rapid in creation but returned to alter their creations.
 
@@ -1363,6 +1369,7 @@ https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/
 [^5]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions
 [^6]: https://mickfuzz.github.io/makecode-platformer-101/addHazard
 [^7]: https://dailypapert.com/mit-logo-memos/
+[^7]: https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#create-a-game-space
 [^8]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#arrays
 [^9]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#change-listener
 [^10]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#systems-dynamics
