--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -837,13 +837,17 @@ The following section explores designs decisions relevant to the evolution of th
 **A note on structural design patterns**
 
 A web code project using the chosen game framework
-phaser consists of several interlinked files of Javascript, HTML and CSS and image files. Creating the project from first principles is relatively complex both semantically and practically. In the domain of web technology, starter templates consist of pre-built collections of HTML, JavaScript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023].
+phaser consists of several interlinked files of Javascript, HTML and CSS and image files. Creating the project from first principles is relatively complex both semantically and practically. In the domain of web technology, starter templates consist of pre-built collections of HTML, JavaScript, CSS and other configuration files which allow users to avoid initial configuration and thus accelerate adding features to projects. For example the Next.js web framework comes with a large range of starter templates based on common requirements of web sites [@nelson_best_2023]. Phaser starting templates available from the website share this pattern of files [^17].
 
-Phaser starting templates available from the website share this pattern of files. The main javascript file containing game code is called game js with the game code. Many code tutorials follow the same structure of suggested functions preload, create and update.
+Game states and functions to create the game loop (see glossary) are included natively in the phaser framework [@faas_introduction_2017]. Game states allow designers to deconstruct games and game code into collections of sub-units (states)   [@kostolny_digital_2017]. For example a simple arcade games may only had an insert coin state, a play state and a game over state. A game coding framework like phaser shields its users from code complexity by providing a game state manager and associated functions out-of-the-box, meaning that lots of underlying code is already written and hidden from view.
 
-Resource - https://developer.mozilla.org/en-US/docs/Games/Tutorials/2D_breakout_game_Phaser/Initialize_the_framework
+To increase simplicity for my participants the starting template I created had only one game state called Playstate. It followed the following structure  : a beginning section out side of a function declaring variables; a preload function which loads assets into the game; a create function which sets up the initial game; an update function which listens to and responds to user input. The following illustration from the step-based instructions illustrates the structure for participants, including the possibility to create new game states e.g. a game over state.
 
-The template in this case followed the following structure: a beginning section out side of a function declaring variables; a preload function which loads assets into the game ;a create function which sets up the initial game; an update function which listens to and responds to user input. While access to HTML and CSS files of the base project was available in the left menu as show in  by default participants would see only the JavaScript file names game.js (See Figure 4.x below)
+![](./Pictures/overview_of_structure_cropped.png){width=55%}
+
+4.x - Game states and function structure explained in the Glitch Game Makers manual created for for P2 and P3
+
+While access to HTML and CSS files of the base project was available in the left menu as show in  by default participants would see only the JavaScript file names game.js (See Figure 4.x below)
 
 
 <!-- The use of template was an immediate, intuitive way to bring something to the table as a starting point to develop.  -->
@@ -936,15 +940,20 @@ This design had a positive impact on engagement in level design in initial stage
 
 #### Background colour and a pixel art
 
-A pixel art approach to graphics allowed a balance between the potential for positive engagement with game making and the potential drain of time to this one activity. 
+Participants were keen to replace the default coloured block sprites of game elements with their own art of characters and backgrounds. From P2 onwards the one suggeted tool to do this was the online Piskel tool [^19]. A pixel art approach to graphics allowed a balance between the potential for positive engagement with game making and the potential drain of time to this one activity, thus helping resolve one of the tensions emerging in P1. Piskel had proved to be intuative for many younger participants with three main areas: a set of editing tools; a canvas for creation; and a set of tools to export, save and import work (see Figure 4.x).
 
-One activity that all participants spent some time on was to replace the coloured block of the starting template with pixel art sprites created using the Piskel tool. Participant spent a widely different length of time creating these graphics. Some took a long time to master the process of using the editing tool. Some others struggled with the process of exporting the images to the code editor. Others were relatively rapid in creation but returned to alter their creations.
+![](./Pictures/piskel_app_1.png){width=95%}
+Figure 4.x - Interface of Piskelapp tool
 
-_Seeding narrative and art creativity_
+One of the complications encountered in P1 was the differing sizes of sprites created using different graphical tools. I helped resolve this for particpants by matching the size of the block in the grid level design structure described above to the default size of sprites created in Piskel (32 x 32 pixels).
 
-As they had been guided to make a game on a broadly environmental theme. Participants often redesigned sprites to games involving animals. The following image shows a whale as a player character and plastic bottles.
+Participants spent a widely different length of time creating these graphics for a variety of reasons.
+Some took a long time to master the process of using the editing tool while others created images rapidly but would keep redesigning and recreating their game elements. The process of the affordence of game art creation opportunities seeding narrative and artistic creativity is explored in more detail in chapter five.
 
-![](./Pictures/whale_1.png){width=50%}
+<!-- _Seeding narrative and art creativity_
+As they had been guided to make a game on a broadly environmental theme, participants often redesigned sprites to games involving animals. The following image shows a whale as a player character and plastic bottles.
+
+![](./Pictures/whale_1.png){width=50%} -->
 
 <!-- MOVE?
 The process of creating a pixel art characters and hazard involved using an online grid design tool called Piskel, creating an design of an appropriate size, saving, exporting as an image, downloading to the hard drive of the laptop in use and finally uploading and incorporating the image into the code project and linking using code syntax. -->
@@ -1375,4 +1384,8 @@ https://docs.google.com/document/d/1DRgpgIUfq5XIktYy-lX4WlviUDnffNc0v8SOeLGgHho/
 [^10]: https://mickfuzz.github.io/makecode-platformer-101/learningDimensions#systems-dynamics
 [^11]: https://phaser.io/examples/v2
 [^12]:https://docs.google.com/document/d/1zUw4xpWT9p2LIqTaZdVN0JRpShvVFG3UQqmsxRriE6s/edit?pli=1 Example of code in google docs
+[^17]: https://phaser.io/sandbox/templates
+[^18]: https://mozdevs.github.io/html5-games-workshop/en/guides/platformer/the-game-loop/
+[^19]: https://www.piskelapp.com
+
 Gilbert is the worsted name.
