--- a/_posts/thesis_chapters/2023-12-4-Design.md
+++ b/_posts/thesis_chapters/2023-12-4-Design.md
@@ -975,22 +975,35 @@ Despite building familiarity with code, at this stage event simple game changes 
  -->
 
 
-### Observations on the initial use of game template and core tool use
+### Observations on the game template and core tools
 
-INCLUDE THE AT LANGUAGE - and relate back to the
+<!-- NOTE: FEEDBACK FOCUS from HCI & layer in AT terminology too.  -->
+
 
 <!-- The templated game was structured to allow changes in code which were relatively easy to perform but which resulted in potentially large changes in game behaviour, appearance and difficulty. This created a large diversity in the games created and in the making activities of participants at this stage despite the small scale of the code changes involved.   -->
 <!-- Thus while I highlighted a limited number key code elements and structures to create affordances to facilitate a quick start, the diversity of experience kept some participants extended periods of time. -->
 
 
-The previous sections have outlined changes to the core tool use including the use of a starter game template which I enacted to address the struggles participants had in becoming accustomed to game making.  Despite the simplicity of the highlighted affordances outlined above, complex and divergent patterns of design behaviour began to emerge. Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with the concept of good feedback in HCI literature [find source] is motivating for system users.
 
-Similarly, the use of revised in starter template in P2 allowed participants to maintained their games in a working and shareable state for most of the time. This compares to periods in P1 where there were extensive periods of time when the game was in a broken state and thus not shareable. My reflections as an facilitator are consistent with research showing the value of ongoing feedback in HCI and more domain specific research on showing the process of sharing creations are motivating thus.
+<!-- Games have been part of human–computer interaction (HCI) research since
+the first CHI conference in 1982. At that gathering, Tom Malone, then at Xerox
+PARC, presented insights from the study of computer games to motivate a set of
+design principles for “enjoyable” user interfaces (Malone, 1982).
 
-The rationale aligns with the core motivations of UMC technique, to build familiarity with the code structure, and confidence in use of tools in an accelerated way.   At the use and modify stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns most closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].   The shift in design from P1 to P2 involved a much more careful and structured experience for participants in use and modify stages.
+from [@bernhaupt_introduction_2015]
+ -->
+
+The previous sections have outlined changes to the core tool use including the use of a starter game template which I enacted to address the struggles participants had in becoming accustomed to game making. Despite the relative simplicity of the highlighted affordances outlined above, complex and divergent patterns of design behaviour began to emerge. Small code changes resulted in potentially large changes in game behaviour, appearance and difficulty aligns with a long standing concept of HCI research that feedback is motivating for system users [@bernhaupt_introduction_2015; @malone_heuristics_1982]. In addition, the use of revised in starter template in P2 allowed participants to maintained their games in a mainly working, shareable state allowing regular feedback from peers.  
+
+<!-- My reflections as an facilitator are consistent with research showing the value of ongoing feedback in HCI and more domain specific research on showing the process of sharing creations are motivating thus. -->
+
+The use of a starting template was inline with core motivations of UMC technique, namely, to build familiarity with the code structure, and confidence in use of tools in an accelerated way. As explored above, the shift in template design from P1 to P2 involved a much more careful and structured experience for participants in use and modify stages. However, participants still needed help to access and use the relevant affordances in code. In early trials with a limited number of families, I would point out the relevant part of the code and ask open questions like, _I wonder what would happen if you changed that gravity variable?_ However, for larger groups this was not optimal, risking leaving some unsupported. My response was to turn to supporting documentation. In addition, participants soon began to ask how to make additions to the game which needed additional code structures, a development signifying a pivot to the _create_ phase on the UMC model. During the create stage additional support is needed from supporting documentation. This section has described tensions stemming from code and asset authoring tools starting game code template. The next section explores similar tensions related to the role of supporting resources and documentation.
 
 
-Participants needed help to access and use the key affordances in code described above. In early trials with a limited number of families, I would point out the relevant part of the code and ask open questions like, _I wonder what would happen if you changed that gravity variable?_ I was concerned that for larger groups this was not optimal, risking leaving some unsupported. My response was to turn to supporting documentation. While this section has described my design response to tensions stemming from code and asset authoring tools and the resultant use of starting game code template, the next section explores similar tensions related to the role of supporting resources. Also, while the simple changes to the game dynamics and patterns embedded in the starting template helped motivation and engagement, some participants soon began to ask how to make additions to the game which needed new code structures to be added to the framework of the template. This point marks the pivot to the _create_ phase on the UMC model. At this stage greater support was needed as explored in the next section.
+<!-- At the use and modify stage, knowledge of very few coding concepts were essential. It useful to compare this to a typical process of learning to code in a text language from first principles where the learner is met with a great many new concepts in the process of being guided to construct even the most basic of programs.  Thus, while some basic alterations are being made, this stage of learning design aligns most closely with the _Use_ stage of the UMC model (see lit review/ glossary) [@lee_computational_2011].    -->
+
+
+
 
 
 
@@ -1040,7 +1053,6 @@ DEVELOP THIS SECTION -->
 
 ## 4. Participant conflict associated with project navigation and use of documentation
 
-**Nature of conflict and how different from previous one**
 
 While the previous section outlined responses to a conflict experienced by partcipants in address a challenge to getting started, this section details a conflict which took place when game making was underway. Participants, frequently knew what new features or changes the wanted to add to the game but were not clear on what computer code was needed to implement it. This cause delays and participant frustration, as although I could work with people directly to help them I had limited time with each participant or pair.  
 
@@ -1054,12 +1066,14 @@ To support the use of the staring processes outlined above, at the end of P1 I a
 ![](./Pictures/velocity_jscard.png){width=95%}
 4.x - Example of a Quick start card
 
+To address this use of time I developed more extensive help files and documentation as there were not enough facilitators. The next section outlines the different forms of documentation created.   
+
 <!-- I wavered between the use of a technical variable name or one more closely linked to the behaviour in the game. For example, I trialled replacing velocity_x and y with playerMoveSpeed and playerJumpSpeed. I returned to velocity x and y as they are important concepts in physics and wider science, here prioritising the more abstract representation based on experiences of participants not getting overwhelmed or stuck on this use of language, quickly forming habits to alter them. I evaluated that more is gained than lost in this design choice. -->
 
 <!--
 ![](./Pictures/quickstart_phaser_1.png){width=50%} -->
 
-As outlined above the starter template and quick activities served to address the _use_ and _modify_ stages of the UMC approach. One seeded into the community, these processes also propagated via peer learning in ways which are explored in chapters five in six. In contrast, the _create_ stage required longer input from my self, to help participants with their individual choices of what to add to the game. To address this use of time I developed more extensive help files and documentation as there were not enough facilitators. The next section outlines the different forms of documentation created.  
+<!-- As outlined above the starter template and quick activities served to address the _use_ and _modify_ stages of the UMC approach. One seeded into the community, these processes also propagated via peer learning in ways which are explored in chapters five in six. In contrast, the _create_ stage required longer input from my self, to help participants with their individual choices of what to add to the game.-->
 
 <!-- SHIFT? - It is notable that the create stage of this model does not involve starting a totally new game from scratch as is imagined in some interpretations of that model. Due to the complexity of the code base and framework the process of creating a new GDP within the game as a suitable level of challenge. -->
 
